Hotfix: Background changed. Canvas max-height: 800 set to avoid overflow

--- a/src/components/Footer/css/footer.css
+++ b/src/components/Footer/css/footer.css
@@ -1,6 +1,4 @@
 footer {
-  justify-self: flex-end;
-  bottom: 0;
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
