--- a/src/components/Nav/css/nav.css
+++ b/src/components/Nav/css/nav.css
@@ -1,5 +1,7 @@
 nav {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 nav .navbar-nav {
   align-items: center;
