--- a/src/features/Game/css/game.css
+++ b/src/features/Game/css/game.css
@@ -1,8 +1,9 @@
 canvas {
   border: none;
   width: 95%;
-  height: 90%;
+  height: 50%;
   min-width: 250px;
   min-height: 350px;
+  max-height: 800px;
   flex-grow: 1;
 }
