--- a/src/layout/Main/css/main.css
+++ b/src/layout/Main/css/main.css
@@ -1,11 +1,10 @@
 main {
-  height: 95%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   flex-grow: 1;
-  gap: 20px;
+  gap: 12px;
   background: none;
 }
